Use DejaVu font

--- a/common/pdf-template.tex
+++ b/common/pdf-template.tex
@@ -10,8 +10,8 @@
 \defaultfontfeatures{Mapping = tex-text, Scale = MatchLowercase}
 
 %% Fonts
-\setmainfont{Verdana}
-\setsansfont{Verdana}
+\setmainfont{DejaVu}
+\setsansfont{DejaVu}
 \setmonofont[Scale=0.85,Mapping=tex-ansi]{Courier New}
 
 %% Set Sans font in headings
